Correcting the auth files
