# swagger.json
@@ -5,10 +5,10 @@
     "description": "Get an update contacts",
     "version": "1.0.0"
   },
-  "host": "localhost:3000",
+  "host": "edgar-y7p9.onrender.com",
   "basePath": "/",
   "schemes": [
-    "http"
+    "https"
   ],
   "paths": {
     "/api-docs": {
@@ -33,8 +33,49 @@
       },
       "post": {
         "description": "",
-        "parameters": [],
-        "responses": {}
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "Model": {
+                  "example": "any"
+                },
+                "Year": {
+                  "example": "any"
+                },
+                "RimSize": {
+                  "example": "any"
+                },
+                "Color": {
+                  "example": "any"
+                },
+                "EngineSize": {
+                  "example": "any"
+                },
+                "Condition": {
+                  "example": "any"
+                },
+                "Value": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       }
     },
     "/vehicle/{id}": {
@@ -71,9 +112,52 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "Model": {
+                  "example": "any"
+                },
+                "Year": {
+                  "example": "any"
+                },
+                "RimSize": {
+                  "example": "any"
+                },
+                "Color": {
+                  "example": "any"
+                },
+                "EngineSize": {
+                  "example": "any"
+                },
+                "Condition": {
+                  "example": "any"
+                },
+                "Value": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
-        "responses": {}
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       },
       "delete": {
         "description": "",
@@ -85,7 +169,190 @@
             "type": "string"
           }
         ],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/carSale/": {
+      "get": {
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "Model": {
+                  "example": "any"
+                },
+                "Year": {
+                  "example": "any"
+                },
+                "RimSize": {
+                  "example": "any"
+                },
+                "Color": {
+                  "example": "any"
+                },
+                "EngineSize": {
+                  "example": "any"
+                },
+                "Condition": {
+                  "example": "any"
+                },
+                "Value": {
+                  "example": "any"
+                },
+                "Quantity": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/carSale/{id}": {
+      "get": {
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      },
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "Model": {
+                  "example": "any"
+                },
+                "Year": {
+                  "example": "any"
+                },
+                "RimSize": {
+                  "example": "any"
+                },
+                "Color": {
+                  "example": "any"
+                },
+                "EngineSize": {
+                  "example": "any"
+                },
+                "Condition": {
+                  "example": "any"
+                },
+                "Value": {
+                  "example": "any"
+                },
+                "Quantity": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       }
     }
   }
